[gd_scene load_steps=2 format=3 uid="uid://market_panel001"]

[ext_resource type="Script" path="res://scripts/ui/market_panel.gd" id="1"]

[node name="MarketPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
visible = false
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.08, 0.98)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32
text = "MARKET"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
text = "X"

[node name="FilterBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 50.0
offset_top = 80.0
offset_right = -50.0
offset_bottom = 130.0
theme_override_constants/separation = 15

[node name="UtilityLabel" type="Label" parent="FilterBar"]
layout_mode = 2
text = "Utility:"

[node name="UtilityFilter" type="OptionButton" parent="FilterBar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="GearLabel" type="Label" parent="FilterBar"]
layout_mode = 2
text = "Gear:"

[node name="GearFilter" type="OptionButton" parent="FilterBar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="WeaponLabel" type="Label" parent="FilterBar"]
layout_mode = 2
text = "Weapon:"

[node name="WeaponFilter" type="OptionButton" parent="FilterBar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="PrimaryAttrLabel" type="Label" parent="FilterBar"]
layout_mode = 2
text = "Primary:"

[node name="PrimaryAttrFilter" type="OptionButton" parent="FilterBar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="SecondaryAttrLabel" type="Label" parent="FilterBar"]
layout_mode = 2
text = "Secondary:"

[node name="SecondaryAttrFilter" type="OptionButton" parent="FilterBar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="Spacer" type="Control" parent="FilterBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SearchButton" type="Button" parent="FilterBar"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Search"

[node name="ResetButton" type="Button" parent="FilterBar"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Reset"

[node name="BackButton" type="Button" parent="FilterBar"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Back"

[node name="MarketContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 150.0
offset_right = -50.0
offset_bottom = -80.0

[node name="ScrollContainer" type="ScrollContainer" parent="MarketContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="MarketGrid" type="GridContainer" parent="MarketContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 8
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="BottomBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0

[node name="PageInfo" type="Label" parent="BottomBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -15.0
offset_right = 100.0
offset_bottom = 15.0
text = "Page 1 of 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PrevButton" type="Button" parent="BottomBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -20.0
offset_right = 130.0
offset_bottom = 20.0
text = "< Prev"

[node name="NextButton" type="Button" parent="BottomBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -20.0
offset_right = -50.0
offset_bottom = 20.0
text = "Next >"
